# mod_generator

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  attribute_data.py  build_release.py  constants.py  drop_slot_data.py  drop_slot_index.py  enemy_drop_constants.py  extract_shop_configs.py  generate_skill_constants.py  generate_translations.py  generator.py  hybrid_item_v2.py  migrations.py  mod_generator.py  models.py  paths.json.example  paths.py  preprocess_drops.py  shop_configs.py  skill_constants.py  specs.py  version.py
cimgui_py/: .gitignore  DESIGN.md  README.md  pyproject.toml  setup.py
cimgui_py/codegen/: README.md  compiler.py  generate_bindings.py
cimgui_py/codegen/config/: overrides.json  type_mapping.json
cimgui_py/codegen/templates/: backend.pyi.jinja2  backend.pyx.jinja2  cimgui.pxd.jinja2  core.pyi.jinja2  core.pyx.jinja2  imgui.pyi.jinja2  imgui_backend.pyx.jinja2  imgui_core.pyx.jinja2
cimgui_py/examples/: simple_demo.py
cimgui_py/imgui/: __init__.py
cimgui_py/imgui/integrations/: __init__.py  glfw.py
cimgui_py/scripts/: build_cimgui.ps1
cimgui_py/src/: cimgui.pxd  imgui_backend.pyx  imgui_core.pyx
cimgui_py/src/cimgui_py/: __init__.py
cimgui_py/tests/: test_fields.py
codegen/: extract_shop_configs.py  generate_enemy_drop_constants.py  generate_font_config.py  generate_icon_font.py  generate_skill_constants.py  generate_tailwind_tokens.py  generate_translations.py  preprocess_drops.py
scripts/: extract_gml_tables.py
serde/: __init__.py  converter.py
ui/: __init__.py  canvas.py  config.py  dialogs.py  fonts.py  (+14 more)
(+16 files in other folders)
